[package]
name = "win-font-dir"
version = "0.1.1"
edition = "2021"
authors = ["NaokiM03"]
description = "This library provides the path to the font directory in Windows."
keywords = ["font", "path", "folder", "windows"]
repository = "https://github.com/NaokiM03/win-font-dir"
license = "MIT"

[dependencies]
